--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.13.1</version>
 		</dependency>
+		<dependency>
+	        <groupId>org.junit.jupiter</groupId>
+	        <artifactId>junit-jupiter-engine</artifactId>
+	        <version>5.4.0</version>
+	        <scope>test</scope>
+	    </dependency>
 	</dependencies>
 	
 	<profiles>
