Add 3rd party eddsa library as a test dependency. The project itself is set as Java 11 compliant, so that's what Github workflow uses to run tests, and so all ed25519 tests were failing as the 3rd party library is not added by default.

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 			<version>2.32.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.i2p.crypto</groupId>
+			<artifactId>eddsa</artifactId>
+			<version>0.3.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<profiles>
